syntax = "proto3";

package io.netifi.proteus.tracing;

import "zipkin/proto3/zipkin.proto";

option java_package = "io.netifi.proteus.tracing";
option java_outer_classname = "ProteusTracingServices";
option java_multiple_files = true;

message Ack {}

service ProteusTracingService {
    rpc StreamSpans (stream zipkin.proto3.Span) returns (Ack) {}
}
